--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,45 @@ body{
 
 .hero{
     grid-area: hero;
+    height: 89vh;
+    background-color: orange;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    /* background: url(../src/images/); */
+}
+
+.hero h2{
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 4rem;
+}
+
+.hero:after{
+    content: url(1);
+    /* content: url("../src/images/"); */
+    /* seta preta */
+    height: 35px;
+    bottom: 40px;
+    position: absolute;
+    animation: downarrow 0.6s infinite alternate ease-in-out;
+
+}
+
+@-webkit-keyframes downarrow{
+    0% {-webkit-transform: translateY(0); opacity: 0.4;}
+    100% {-webkit-transform: translateY(0.4em); opacity: 0.9;}
+}
+
+@media(max-width: 425px){
+    .hero{
+        height: 60vh;
+    }
+    .hero h2{
+        font-size: 2.5rem;
+    }
 }
 
 /* ABOUT */
