--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,7 +49,7 @@ body{
 .hero{
     grid-area: hero;
     height: 89vh;
-    background-color: orange;
+    background: url(../images/lemons.jpg) center no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -65,7 +65,7 @@ body{
 }
 
 .hero:after{
-    content: url(1);
+    content: url("../images/seta_preta.png");
     /* content: url("../src/images/"); */
     /* seta preta */
     height: 35px;
