corrigido posicao do hero e display do hamburguer

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -19,7 +19,7 @@
 /* RESPONSIVE */
 
 .header .menu{
-    /* display: none; */
+    display: none;
     width: 60px;
     height: 60px;
     align-self: flex-end;
@@ -104,9 +104,10 @@
         width: 200px;
         background-color: #fff;
         padding: 20px;
+        text-align: center;
     }
 
     .header nav ul a{
-        text-align: center;
+        padding: 20px;
     }
 }
