--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,14 +6,15 @@ html{
 }
 body{
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
     grid-template-areas: 
     "header header header header"
     "hero hero hero hero"
+    "about about about about"
     "services services services services"
     "projects projects projects projects"    
     "footer footer footer footer"
     ;
-    grid-template-columns: repeat(4, 1fr);
     font-size: 1.6rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
@@ -105,4 +106,10 @@ body{
 
 .projects{
     grid-area: projects;
+}
+
+/* FOOTER */
+
+.footer{
+    grid-area: footer;
 }
