corrigido o padding do menu no responsivo

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -107,7 +107,7 @@
         text-align: center;
     }
 
-    .header nav ul a{
-        padding: 20px;
+    .header nav ul li{
+        margin-block: 20px;
     }
 }
